--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<mgl-map
-  [style]="'https://api.maptiler.com/maps/streets/style.json?key=YOUR_MAPTILER_API_KEY_HERE'"
-  [zoom]="[14]"
-  [center]="[16.62662018, 49.2125578]"
->
-<mgl-control mglNavigation position="top-left"></mgl-control>
-</mgl-map>
+<app-maps></app-maps>
