--- a/src/app/modules/maps/maps/maps.component.html
+++ b/src/app/modules/maps/maps/maps.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <h1 style="background-color: red">title</h1>
   </div>
@@ -6,4 +6,9 @@
     <mgl-marker [lngLat]="[16.62662018, 49.2125578]"></mgl-marker>
     <mgl-control mglNavigation position="top-left"></mgl-control>
   </mgl-map>
+</div> -->
+<div class="container">
+  <div class="row">
+    <div id="map" class="mgl-map"></div>
+  </div>
 </div>
